# learnopengl2

./: .env  .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
Glad/: CMakeLists.txt
lib/: CMakeLists.txt
lib/GladLib/: CMakeLists.txt  glad.c
lib/GladLib/glad/: glad.h
src/: CMakeLists.txt  app.h  main.cpp
src/core/: CMakeLists.txt  app.cpp  app.h  box_mesh.cpp  box_mesh.h  camera.cpp  camera.h  mesh.cpp  mesh.h  object3D.cpp  object3D.h  renderer.cpp  renderer.h  scene.cpp  scene.h  square_mesh.cpp  square_mesh.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h
src/core/geometry/: box_geometry.cpp  box_geometry.h  buffer_geometry.cpp  buffer_geometry.h
src/core/material/: basic_material.cpp  basic_material.h  light_material.cpp  light_material.h  map_material.cpp  map_material.h  material.cpp  material.h
src/exceptions/: CMakeLists.txt  file_exception.cpp  file_exception.h  glfw_exception.cpp  glfw_exception.h
src/shaders/: multi_color_triangle.frag
src/shaders/box/: box.frag  box.vert  light_box.frag  light_box.vert
src/shaders/light/: box.frag  box.vert  map.frag  map.vert
src/shaders/multi_color_triangle/: multi_color_triangle.vert  multi_color_upsidedown_triangle.vert  position_color.vert
src/shaders/square/: one_reverse.frag  perspective.vert  rotated_scaled.vert  square_texture.frag  square_texture.vert
src/utils/: CMakeLists.txt  buffer_object.h  color_utils.cpp  color_utils.h  program.cpp  program.h  program_utils.cpp  program_utils.h  shader.cpp  shader.h  shader_utils.cpp  shader_utils.h  texture.cpp  texture.h  utils.cpp  utils.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object.h
stb/: CMakeLists.txt
